// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackToTop component handles button click 1`] = `
<div>
  <div
    class="BackToTop-root-73"
  >
    <button
      aria-hidden="false"
      aria-label="back-to-top"
      class="MuiButtonBase-root MuiButton-root Button-root-77 MuiButton-contained Button-contained-79 BackToTop-button-75 MuiButton-containedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-80"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root BackToTop-icon-76"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`BackToTop component handles scroll 1`] = `
<div>
  <div
    class="BackToTop-root-49 BackToTop-hidden-50"
  >
    <button
      aria-hidden="true"
      aria-label="back-to-top"
      class="MuiButtonBase-root MuiButton-root Button-root-53 MuiButton-contained Button-contained-55 BackToTop-button-51 MuiButton-containedPrimary"
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-56"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root BackToTop-icon-52"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`BackToTop component renders correctly 1`] = `
<div>
  <div
    class="BackToTop-root-1 BackToTop-hidden-2"
  >
    <button
      aria-hidden="true"
      aria-label="back-to-top"
      class="MuiButtonBase-root MuiButton-root Button-root-5 MuiButton-contained Button-contained-7 BackToTop-button-3 MuiButton-containedPrimary"
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-8"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root BackToTop-icon-4"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`BackToTop component renders correctly with className 1`] = `
<div>
  <div
    class="classname BackToTop-root-25 BackToTop-hidden-26"
  >
    <button
      aria-hidden="true"
      aria-label="back-to-top"
      class="MuiButtonBase-root MuiButton-root Button-root-29 MuiButton-contained Button-contained-31 BackToTop-button-27 MuiButton-containedPrimary"
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-32"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root BackToTop-icon-28"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
